# jcode-wallet-api

./: Dockerfile  README.md  alembic.ini  custom_uvicorn_worker.py  docker-compose.yaml  entrypoint.sh  postgresql.conf  pyproject.toml  single_wallet_load_test.py  test.env  wallet_load_test.py
alembic/: env.py
alembic/versions/: 8ccb17e6da78_create_wallet_table.py
app/: main.py
app/api/v1/: crud_services.py  models.py  wallet.py
app/config/: config.py
app/db/: database.py
app/db/models/: __init__.py  models.py
app/exceptions/: wallet_exceptions.py
tests/: conftest.py
tests/api/: test_wallets.py
