[project]
name = "jcode-walet-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Garik",email = "khvatik.igor@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "pytest-asyncio (>=0.25.2,<0.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing -s -v"
asyncio_default_fixture_loop_scope = "function"
